<resources>

    <string name="app_name">FGmobile</string>
    <string name="app_name2">FGmobile</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">FGmobile</string>
    <string name="username_hint">Username</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="password_hint">Password</string>
    <string name="reset">Reset session</string>
    <string name="title_activity_posts">Buksa</string>
    <string name="logout">Logout</string>
    <string name="comments">comments</string>
    <string name="votes">votes</string>
    <string name="title_comments_activity">Komentari</string>
    <string name="comment_label">Odgovori:</string>
    <string name="button_post_comment">Rokaj</string>
    <string name="button_cancel">Odustani</string>
    <string name="title_activity_postAdd">Novi post</string>
    <string name="cancel">Zapri</string>
    <string name="fg_logo">fg logo</string>
    <string name="post_hint">Objavi post..</string>
    <string name="comment_hint">Tekst komentara..</string>
    <string name="loadingimgs">Učitavam slike..</string>
    <string name="imgdesc">Slika</string>
    <string name="comment_no_text">Pa moraš nešto i napisati..</string>
    <string name="dialog">Dialog Bubi :)</string>
    <string name="save_comment">Spremam komentar!</string>
    <string name="login_atempt">Pokušavam login!</string>
    <string name="no_internet">Nema interneta!</string>
    <string name="conect_internet">Spoji se na internet i ponovo pokreni aplikaciju.</string>
    <string name="send_post">Šaljem post..</string>
    <string name="load_more">Daj još!</string>
    <string name="logout_succeeded">Odjava uspješna..</string>
    <string name="error_comment_save">Greska kod spremanja komentara!</string>
    <string name="delete">Obriši</string>
	<string name="nadimak">Nadimak</string>
	<string name="email">Email</string>
	<string name="karma">Karma</string>
	<string name="reg">Registracija</string>
	<string name="photo">Slika</string>
	<string name="del">X</string>
	<string name="delAll">Obriši sve</string>
    <string name="title_activity_reg">RegActivity</string>
	<string name="ok">OK</string>
	<string name="userRecommender">Tko te preporučio?</string>
	<string name="password2">Ponovite password</string>
	<string name="backLogin">Već sam regan</string>
</resources>