<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/header"
        layout="@layout/header" />

    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
   <LinearLayout 
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:paddingBottom="5dp">
    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/def2" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/light_grey"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/nadimak" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/email" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/reg" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/karma" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/profileUsername"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:background="@drawable/white_button"
                android:clickable="true"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:textColor="#DC143C" />

            <TextView
                android:id="@+id/profileEmail"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:background="@drawable/white_button"
                android:clickable="true"
                android:gravity="center_vertical"
                android:padding="5dp" />

            <TextView
                android:id="@+id/profileReg"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:padding="5dp" />

            <TextView
                android:id="@+id/profileKarma"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:padding="5dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/light_grey"
        android:orientation="vertical" >
    </LinearLayout>

    	<Button 
    	    android:id="@+id/profilePosts"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grey_button"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:onClick="intentPosts"
            android:visibility="gone"/>
    	<Button 
    	    android:id="@+id/profileMentions"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grey_button"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:onClick="intentPosts"
            android:visibility="gone"/>
    	<Button 
    	    android:id="@+id/profileFg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grey_button"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:onClick="intentPosts"
            android:visibility="gone"/>
   </LinearLayout>

</ScrollView>
</LinearLayout>